fix: remove horizontal scroll

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,10 +1,12 @@
 .header {
   position: absolute;
   box-sizing: border-box;
-  width: 100vw;
   display: flex;
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
+  width: 100%;
+  max-width: 2400px;
+  margin: 0 auto;
   padding: 0 5%;
 }
