--- a/src/main.scss
+++ b/src/main.scss
@@ -10,8 +10,13 @@
 @include font-face("Helvetica Neue", "HelveticaNeue-Light", lighter);
 @include font-face("Helvetica Neue", "HelveticaNeue-Bold", bold);
 
-.app {
-  width: 100vw;
-  max-width: 2400px;
+html {
   background-color: rgb(32, 32, 32);
+  max-width: 100vw;
+}
+
+.app {
+  width: 100%;
+  max-width: 2400px;
+  margin: 0 auto;
 }
